# reliable-message-api

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
.aws-cli/v2/: current
.circleci/: config.yml
.github/workflows/: ci.yml
app/: main.py
app/api/: messages.py  schemas.py
app/core/: config.py  logging.py  middleware.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/observability/: metrics.py  tracing.py
app/services/: errors.py  messages.py  validators.py
docker/: Dockerfile
hack/: bootstrap.cmd  bootstrap.ps1  bootstrap.sh  dev-env.cmd  dev-env.ps1  dev-hosts.ps1  dev-hosts.sh  doctor.sh  install-all.cmd  install-all.ps1  install-docker.cmd  install-docker.ps1  install-python.cmd  install-python.ps1  install-wsl2.cmd  install-wsl2.ps1  tool-versions.env  uninstall-all.cmd  uninstall-all.ps1  wsl-here.cmd  wsl-here.ps1
k8s/base/: cronjob-idempotency-cleanup.yaml  deployment.yaml  kustomization.yaml  service.yaml
k8s/overlays/dev-dd/: api-datadog-patch.yaml  datadog.yaml  kustomization.yaml
postman/: reliable-message-api.business-rules.postman_collection.json  reliable-message-api.local.https-443.postman_environment.json  reliable-message-api.local.postman_environment.json
scripts/: cleanup_idempotency.py  dev_env.py  dev_https.ps1  dev_kind.ps1  dev_kind.sh  lens_kind.ps1  run_migrations.py  wsl_bootstrap.ps1  wsl_bootstrap.sh
setup/ubuntu-22.04/: setup.sh
setup/windows-11-wsl2-docker-desktop/: install-docker.ps1  install-wsl2.ps1  provision.ps1  setup.ps1  unprovision.ps1
tests/: conftest.py
tests/contract/: test_contract.py
tests/integration/: test_messages.py
tests/unit/: test_idempotency_hash.py  test_validation.py
(+21 files in other folders)
